crates/cribo/tests/snapshots/bundled_code@stickytape_script_using_stdlib_module_in_package.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stickytape_script_using_stdlib_module_in_package/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import types
message = "Hello"
import xml.etree.ElementTree
greeting = types.SimpleNamespace()
greeting.__all__ = ['message']
greeting.message = message
print(xml.etree.ElementTree.__name__)
print(greeting.message)
